--- a/_posts/2012-10-20-my-first-blog.html
+++ b/_posts/2012-10-20-my-first-blog.html
@@ -1,10 +1,11 @@
 ---
-layout: default
-title: 你好，世界
+layout: blog-template
+title: 我的第一篇博文
 ---
-
+<div id="oyt">
 <h2>{{ page.title }}</h2>
 
 <p>我的第一篇文章</p>
 
 <p>{{ page.date | date_to_string }}</p>
+</div>
