--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: 我的Blog
+title: my blog
 ---
 
 <h2>{{ page.title }}</h2>
 
-<p class="test">最新文章</p>
+<p>鎴戞槸棣栭〉</p>
 
 <ul>
 
