--- a/_posts/2012-10-18-hello-world.html
+++ b/_posts/2012-10-18-hello-world.html
@@ -1,10 +1,15 @@
 ---
 layout: blog-template
-title: 我是第一篇博客title
+title: 我是博文标题
 ---
 
 <h2>{{ page.title }}</h2>
 
-<p>我是第一篇博客</p>
+<p>
+	我这里是文章内容我这里是文章内容我这里是文章内容我这里是文章内容我这里是文章内容我这里是文章内容
+	我这里是文章内容我这里是文章内容我这里是文章内容我这里是文章内容
+	我这里是文章内容我这里是文章内容我这里是文章内容
+	我这里是文章内容我这里是文章内容我这里是文章内容
+</p>
 
 <p>{{ page.date | date_to_string }}</p>
