--- a/_posts/2012-12-10-about-me.html
+++ b/_posts/2012-12-10-about-me.html
@@ -1,15 +1,11 @@
 ---
 layout: blog-template
-title: 我是博文标题
-cover: http://img02.taobaocdn.com/tps/i2/T1faEcXhlgXXc5sXEr-318-260.png
-summary: 这是我建立自己博客的第一篇博文，以后都在这里记录自己的点滴，关于工作技能，也关于生活娱乐。
+title: 关于我
 ---
 
-<h2>{{ page.title }}</h2>
+姓名：欧阳涛
+目前就职于阿里巴巴
+前端攻城师
 
-<p>
-	这是我建立自己博客的第一篇博文，以后都在这里记录自己的点滴，关于工作技能，也关于生活娱乐。
-	谢谢支持！
-</p>
-
-<p>{{ page.date | date_to_string }}</p>
+喜欢打台球、桌上足球
+热爱前端以及计算机各种技术，欢迎交流
