--- a/_posts/2012-10-18-hello-world.html
+++ b/_posts/2012-10-18-hello-world.html
@@ -3,6 +3,8 @@ layout: blog-template
 title: 我是博文标题
 cover: http://img02.taobaocdn.com/tps/i2/T1faEcXhlgXXc5sXEr-318-260.png
 summary: 这是我建立自己博客的第一篇博文，以后都在这里记录自己的点滴，关于工作技能，也关于生活娱乐。
+tags: 测试
+category: "测试页面"
 ---
 
 <h2>{{ page.title }}</h2>
