--- a/demo/slide.html
+++ b/demo/slide.html
@@ -57,7 +57,7 @@ body{
 	top:0;
 	left:0;
 }
-#J_slide .img-box img{
+#J_slide .img-box .img-pic{
 	float:left;
 }
 #J_slide .dots{
@@ -97,7 +97,8 @@ body{
 		<a class="change prev" href="javascript:void(0);">prev</a>
 		<a class="change next" href="javascript:void(0);">next</a>
 		<div class="img-box clearfix">
-			<img class="img-pic" style="width:5000px;height:100%;display:block" src="http://img04.taobaocdn.com/tps/i4/T134gxXnFdXXblQ4v1-696-338.jpg">
+			<img class="img-pic" style="width:2000px;height:100%;display:block" src="http://img04.taobaocdn.com/tps/i4/T134gxXnFdXXblQ4v1-696-338.jpg">
+			<img class="img-pic" style="width:2000px;height:100%;display:block" src="http://img04.taobaocdn.com/tps/i4/T134gxXnFdXXblQ4v1-696-338.jpg">
 		</div>
 	</div>
 </body>
